Added head name thing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time Carried Records Homepage</title>
   <meta name="description" content="TimeCarriedRecords.com hosts promotions, upcoming events, and all around important information about Time Carried Records and the artists and producers that make them up.">
-  <link rel="canonical" href="https://1st-amendment.org/">
+  <link rel="canonical" href="https://timecarriedrecords.com/">
   <meta name="robots" content="index, follow">
 
   <meta property="og:title" content="TimeCarriedRecords.com &mdash; Stay up to date and informed about Time Carried Records and the artists and producers that make us up">
