upload with image

--- a/login/dashboard/dashboard.html
+++ b/login/dashboard/dashboard.html
@@ -50,6 +50,7 @@
 
 <form id="uploadForm">
   <input type="file" id="songFile" accept="audio/*" required />
+  <input type="file" id="coverFile" accept="image/*" />
   <input type="text" id="songTitle" placeholder="Song Title" required />
   <button type="submit">Upload Song</button>
 </form>
