--- a/ydl-boots.html
+++ b/ydl-boots.html
@@ -153,7 +153,10 @@
         <h4 class="text font fontfont">Socials & Contacts:</h4>
       </div>
 
-      <div class="row">
+    </div>
+
+    
+      <div class="row p-0">
 
         <div class="col d-flex justify-content-center">
           <a href="https://open.spotify.com/artist/751lFKHLk57ZaJtXzvyCjm?si=OdkXst5yRf2HSpi3vPnn1g"><img class="socials-size" src="images/spotify-100x100.png"></a>
@@ -172,8 +175,6 @@
         </div>
 
       </div>
-
-    </div>
 
   </div>
 
