--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="col d-flex align-items-center justify-content-center">
             
             <div class="card lion" style="width: 20rem;">
-                <img src="images/ydlboots-no.png" class="card-img-top" alt="YDL Boots Banner">
+                <img src="images/ydl-boots-front.png" class="card-img-top" alt="YDL Boots Banner">
                     <div class="card-body card-bg">
                         <h5 class="card-title">YDL Boots</h5>
                         <p class="card-text">YDL Boots is a versitile and unique upcoming rapper from Fort Worth Texas and co-founder of Time Carried Record, primarily known for emotional rap.</p>
