--- a/time-carried-beats.html
+++ b/time-carried-beats.html
@@ -59,20 +59,18 @@
 <body class="tcb-bg">
 
 
-<div class="container-fluid py-2 header-bg sticky-top">
+<div class="container-fluid p-2 header-bg sticky-top">
 
     <div class="row align-items-center">
 
-        <div class="col-auto">
-            <img src="images/menu.png" class="img-fluid" style="min-height: 75px; max-height: 95px; width: auto;">
+        <div class="col">
         </div>
 
         <div class="col d-flex align-items-center justify-content-center">
             <h1 class="suse-mono-uniquifier">Time Carried Records</h1>
         </div>
 
-        <div class="col-auto">
-            <img src="images/favicon.JPG" class="img-fluid rounded" style="min-height: 75px; max-height: 75px; width: auto;">
+        <div class="col">
         </div>
 
     </div>
@@ -80,17 +78,16 @@
 </div>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col d-flex align-items-center justify-content-center">
-            <img class="size-size" src="images/time2.png">
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col text-align-center">
-            <h1 class="text"> Beats:</h1>
-        </div>
+  <div class="row">
+
+    <div class="col p-0">
+
+      <img class="banner-size" src="images/tx-banner.png">
+
     </div>
+    
+  </div>
 
 </div>
 
@@ -110,10 +107,17 @@
 
       <!-- Left content -->
       <div class="col d-flex justify-content-center">
-        <h5 class="font-size2">
-          Time Carried Records is a small independent label created by artists and producers with a shared passion for music. 
-          Our mission is to support artists, release authentic sounds, and build a community around creativity and expression.
-        </h5>
+
+        <div class="row-auto">
+
+            <h5 class="font-size2">
+            Time Carried Records is a small independent label created by artists and producers with a shared passion for music. 
+            Our mission is to support artists, release authentic sounds, and build a community around creativity and expression.
+            </h5>
+
+        </div>
+
+
       </div>
 
       <!-- Middle links -->
